<resources>
    <string name="app_name">Practicando</string>
    <string name="titulo">Flash</string>
    <string name="nombre">Nombre:</string>
    <string name="nombre_flash">Barry Allen</string>
    <string name="poderes">Poderes:</string>
    <string name="flash_powers">Super velocidad, viaje en el tiempo, sanación.</string>
    <string name="registro">Registro de Superheroes</string>
    <string name="registrar">Registrar</string>
    <string name="estatura">Estatura</string>
    <string name="genero">Género:</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="info">Nombre: %s \n, Estatura: %f \n, Género: %s \n, Poderes: %s \n, Ciudad: %s</string>
    <string name="super_fuerza">Super fuerza</string>
    <string name="velocidad">Super velocidad</string>
    <string name="telequinesis">Telequinésis</string>
    <string name="ciudad">Ciudad:</string>
    <string name="superman">Superman</string>
    <string name="batman">Batman</string>
    <string name="nombreBatman">Bruce Wayne</string>
    <string name="alias">Alias:</string>
    <string name="city">Ciudad</string>
    <string name="ciudad_central">Ciudad Central</string>
    <string name="occupation">Ocupación:</string>
    <string name="reporter">Reportero</string>
    <string name="fb">Facebook:</string>
    <string name="facebook_example">facebook.com/TheFlash</string>
    <string-array name="ciudades">
        <item> Ciudad Gótica</item>
        <item> Ciudad Central</item>
        <item> Metrópolis</item>
        <item> Temiscira</item>
    </string-array>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>